Cherry-pick 262698@main (abf098f7f5b0). https://bugs.webkit.org/show_bug.cgi?id=254549

REGRESSION(259818@main...259759@main?): CSS variables are not applied to the SVG use element's shadow tree
    https://bugs.webkit.org/show_bug.cgi?id=254549
    rdar://107295588

    Reviewed by Ryosuke Niwa.

    We fail to inherit custom properties to <use> element shadow tree in the specific case where
    the targeted element is the root element of an external SVG document.

    * LayoutTests/http/tests/svg/resources/st-search.svg: Added.
    * LayoutTests/http/tests/svg/use-custom-property-inheritance-expected.html: Added.
    * LayoutTests/http/tests/svg/use-custom-property-inheritance.html: Added.
    * Source/WebCore/style/StyleResolver.cpp:
    (WebCore::Style::Resolver::styleForElement):

    Don't suppress property inheritance for the document element in the case we are resolving a <use> tree root.

    * Source/WebCore/style/StyleResolver.h:
    * Source/WebCore/svg/SVGElement.cpp:
    (WebCore::SVGElement::resolveCustomStyle):

    Canonical link: https://commits.webkit.org/262698@main